--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/*.js": {
+    "api/perigaeum-year.js": {
       "runtime": "nodejs20.x",
       "includeFiles": "api/ephe/**"
     }
